Update portfolio to a material UI table

--- a/client/src/components/portfolio/portfolio.css
+++ b/client/src/components/portfolio/portfolio.css
@@ -10,7 +10,7 @@ td {
 
 th {
     padding: 10px;
-    background-color: #4CAF50;
+    /*background-color: #4CAF50;*/
     color: white;
     font-size: 15px;
 }
